Fix layout issues on logs view and cards too large
1. The lines on logs view had excessive spacing
2. All cards were 100% height

--- a/src/app/frontend/common/components/contentcard/contentcard.scss
+++ b/src/app/frontend/common/components/contentcard/contentcard.scss
@@ -21,7 +21,6 @@
 
 kd-content-card {
   display: block;
-  height: 100%;
   margin: 2.5 * $baseline-grid;
 }
 
